--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Supreme Secondary Learner Government</h1>
+        <h1>HANAWAN NATIONAL HIGH SCHOOL Supreme Secondary Learner Government</h1>
         <nav>
             <a href="#">Home</a>
             <a href="#">Officers</a>
@@ -26,17 +26,19 @@
         <div class="officer-gallery">
             <div class="officer">
                 <img src="images/president.jpg" alt="President">
-                <p>President: Jane Doe</p>
+                <p>President: Kristina Cassandra R. Pollero</p>
+                <p>SSLG ADVISER: Maria Glaiza Macenda</p>
             </div>
             <div class="officer">
                 <img src="images/vice-president.jpg" alt="Vice President">
-                <p>Vice President: John Smith</p>
+
             </div>
         </div>
     </section>
 
     <footer>
         <p>&copy; 2025 SSLG. All rights reserved.</p>
+        <p> Created by Andrey Ciron</p>
     </footer>
 </body>
 </html>
